--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Calculators</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -57,7 +57,7 @@
 
 
     }
-
+    
     body {
       background-image: url("mathBack.jpg")
     }
@@ -108,6 +108,10 @@
         <p id="y-int">Y-int</p>
         <p id="vertex">Vertex</p>
         <p id="correspondingPoint">Corresponding</p>
+        <p id="symLine">Line of Symmetry</p>
+        <p><button type="btn" onclick="zOut()" class="glyphicon glyphicon-plus"></span></button></p>
+        <p><button type="btn" onclick="zIn()" class="glyphicon glyphicon-minus"></span></button></p>
+        
       </div>
       </div>
       <div class="col-sm-8 text-left"> 
